<resources>
    <string name="app_name">PhotoDance</string>
    <string name="toolbar_account">Account</string>
    <string name="toolbar_take_photo">Take Photo</string>
    <string name="text_my_collection">我的收藏</string>
    <string name="text_log_off">注销</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_photo_album">从相册中选择</string>
    <string name="cancel">取消</string>
    <string name="login_user_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="please_register">没有账户？请先注册</string>
    <string name="register_phone_number">请输入手机号码</string>
    <string name="register_set_username">请输入用户名</string>
    <string name="register_set_password">请输入密码</string>
    <string name="text_select_user_head_image">请设置您的头像</string>
    <string name="text_next"><![CDATA[下一步]]></string>
    <string name="get_sms_code">点击获取短信验证码</string>
    <string name="after_time_resend">%d秒后重新发送</string>
    <string name="sms_send_fail">服务器异常，验证码未发送成功</string>
    <string name="token_invalid">登录过期</string>
    <string name="sms_check_fail">验证码错误</string>
    <string name="error_server"> 服务器繁忙 </string>
    <string name="nav_photo">图片</string>
    <string name="nav_live">直播</string>
    <string name="nav_message">消息</string>
    <string name="nav_short_video">短视频</string>
    <string name="nav_take_photo">拍照</string>
    <string name="nav_upload">上传</string>
    <string name="nav_search">搜索</string>

    //dkplayer
    <string name="float_window_warning">当前无权限使用悬浮窗，请授权！</string>
    <string name="error_message">出了点小问题，稍后重试</string>
    <string name="retry">重    试</string>
    <string name="continue_play">继续播放</string>
    <string name="wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="lock_tip">请先解锁屏幕！</string>
    <string name="unlocked">已解锁</string>
    <string name="locked">已锁定</string>
    <string name="replay">重新播放</string>

</resources>
