<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <Button
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/take_photo"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/text_size_large"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <Button
        android:id="@+id/select_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape"
        android:text="@string/select_from_photo_album"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape"
        android:text="@string/cancel"
        android:textColor="@color/color_red"
        android:textSize="@dimen/text_size_large"/>

</LinearLayout>