<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/login_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient_2">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userHeadImage_login"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/personal_center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userHeadImage_login"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_user_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_name"
            android:textColorHint="@color/color_red"
            android:textColor="@color/color_black"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_name"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:textColorHint="@color/color_red"
            android:textColor="@color/color_black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_login"
        android:layout_below="@+id/login_password"
        android:textColor="@color/color_black"
        android:background="@drawable/blue_button_enabled_shape"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/please_register"
        android:textColor="@color/color_black"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:padding="30dp"/>


</RelativeLayout>