<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/register_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ver="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient_3">

    <ImageView
        android:id="@+id/dismiss"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:src="@drawable/clear"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/phone_number_sms_code"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_below="@+id/dismiss">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_phone_number"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_phone_number_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_phone_number"
                android:textColorHint="@color/color_red"
                android:textColor="@color/color_black"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/get_sms_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/get_sms_code"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_small"
            android:background="@drawable/blue_button_selector"/>

    </LinearLayout>

    <com.dalimao.corelibrary.VerificationCodeInput
        android:id="@+id/verificationCodeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/phone_number_sms_code"
        ver:box="6"
        ver:child_h_padding="5dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/username_password"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/dismiss"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_set_username"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_set_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_set_username"
                android:textColorHint="@color/color_red"
                android:textColor="@color/color_black"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_set_password"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_set_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_set_password"
                android:textColorHint="@color/color_red"
                android:textColor="@color/color_black"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_register"
        android:layout_below="@+id/username_password"
        android:textColor="@color/color_black"
        android:background="@drawable/blue_button_selector"
        android:visibility="gone"/>

</RelativeLayout>